--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,33 @@
 .App {
   text-align: center;
+  display: grid;
+  grid-template-rows: 15vh auto 10vh;
+  height: 100vh;
+}
+
+.App__header {
+  display: flex;
+  justify-content: right;
+  border-bottom: 1px green solid;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.App__header__navLinks {
+  display: flex;
+  justify-content: right;
+  gap: 20px;
+  align-items: center;
+  margin-left: 5%;
+}
+
+.App__header__logo {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: left;
+}
+
+.home__rick__img {
+  width: 100%;
 }
