--- a/src/style/Characters.css
+++ b/src/style/Characters.css
@@ -10,5 +10,7 @@
 
 .characters__wrapper img {
   width: 40%;
-  padding: 20px;
+  padding: 10px;
+  border: 1px var(--blue) solid;
+  border-radius: 50%;
 }
