add localstorage, now i have to pass the data into a function, when seting the item

--- a/src/style/CharacterSinglePage.css
+++ b/src/style/CharacterSinglePage.css
@@ -26,3 +26,9 @@
   background-color: var(--green);
   color: var(--bluegreen);
 }
+
+.characters__singlePage__favouritebutton {
+  width: 10%;
+  height: 10%;
+  background-color: var(--green);
+}
